--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,13 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.dark {
+  background: #222222;
+  color: aliceblue;
+}
+
+.light {
+  background: aliceblue;
+  color: #222222;
+}
